fix: overflow

--- a/src/components/layout/footer/styles.module.scss
+++ b/src/components/layout/footer/styles.module.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   .contacts {
     color: #f3faff;
     letter-spacing: 0.1rem;
