--- a/src/pages/home/sections/clients/styles.module.scss
+++ b/src/pages/home/sections/clients/styles.module.scss
@@ -4,7 +4,7 @@
   margin-top: 5rem;
   background: #f7f7f7;
   padding: 8rem 0;
-
+  overflow: hidden;
   .whyUs {
     text-align: center;
     padding: 0 2rem 6rem;
